force-app/main/default/objects/Asset__c/fields/AssetType__c.field-meta.xml
<CustomField>
    <fullName>AssetType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the asset type. Will be used to validate if assets have all the information required of the type linked</description>
    <label>Type</label>
    <referenceTo>AssetType__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>