force-app/main/default/objects/Asset__c/fields/BusinessOwnershipPercentage__c.field-meta.xml
<CustomField>
    <fullName>BusinessOwnershipPercentage__c</fullName>
    <description>Business use: To record how much of a business is owned by the client
Tech use: Only applicable if the asset type category is Business</description>
    <label>Business ownership percentage</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>