force-app/main/default/objects/Asset__c/fields/BusinessOwnershipPercentageFormula__c.field-meta.xml
<CustomField>
    <fullName>BusinessOwnershipPercentageFormula__c</fullName>
    <description>Convert ownership percentage field from a decimal to a percentage to display to users</description>
    <formula>BusinessOwnershipPercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business ownership percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>