force-app/main/default/objects/Asset__c/fields/ClosureNotes__c.field-meta.xml
<CustomField>
    <fullName>ClosureNotes__c</fullName>
    <description>To record free text notes on the closure of the asset. Required when an asset has a status of gifted or other.</description>
    <label>Closure notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>