force-app/main/default/objects/Asset__c/fields/LegacyAsset__c.field-meta.xml
<CustomField>
    <fullName>LegacyAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business use: Ability to view a legacy asset from the newly created one. Field cannot be edited.</description>
    <label>Legacy asset</label>
    <referenceTo>Assets__c</referenceTo>
    <relationshipLabel>Legacy Assets</relationshipLabel>
    <relationshipName>LegacyAssets</relationshipName>
    <type>Lookup</type>
</CustomField>