force-app/main/default/objects/Asset__c/fields/NotesInternal__c.field-meta.xml
<CustomField>
    <fullName>NotesInternal__c</fullName>
    <description>Notes for internal users relating to the asset. For internal use only, not visible in the portal</description>
    <inlineHelpText>Internal notes only, will not be visible to clients.</inlineHelpText>
    <label>Notes (internal)</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>