force-app/main/default/objects/Asset__c/fields/OwnershipDetails__c.field-meta.xml
<CustomField>
    <fullName>OwnershipDetails__c</fullName>
    <description>Free text field to capture any additional details related to asset ownership provided by the client in the portal.</description>
    <label>Ownership details</label>
    <type>TextArea</type>
</CustomField>