force-app/main/default/objects/Asset__c/fields/OwnershipType__c.field-meta.xml
<CustomField>
    <fullName>OwnershipType__c</fullName>
    <description>Indicates how ownership is split on a particular asset</description>
    <label>Ownership type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole ownership</fullName>
            </value>
            <value>
                <fullName>Joint tenancy</fullName>
            </value>
            <value>
                <fullName>Tenancy in common</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>