force-app/main/default/objects/Asset__c/fields/PlatformCreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformCreatedDateTime__c</fullName>
    <description>To record the date and time the record was created on the platform 
Updated by finprod service</description>
    <label>Platform created date time</label>
    <type>DateTime</type>
</CustomField>