force-app/main/default/objects/Asset__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <description>To record the date and time the asset record was last modified on the platform
Updated by Nova Service</description>
    <label>Platform last modified date time</label>
    <type>DateTime</type>
</CustomField>