force-app/main/default/objects/Asset__c/fields/PurchaseValue__c.field-meta.xml
<CustomField>
    <fullName>PurchaseValue__c</fullName>
    <description>Amount the asset was purchased at</description>
    <label>Purchase value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>