force-app/main/default/objects/Asset__c/fields/RetainedEarnings__c.field-meta.xml
<CustomField>
    <fullName>RetainedEarnings__c</fullName>
    <description>Business use: Used to record the net income (after dividends are paid) of a clients company. 
Tech use: Only display if field has a value
Data inputters: Clients in the portal, can be updated by users in salesforce</description>
    <label>Retained Earnings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>