force-app/main/default/objects/Asset__c/fields/SoldDate__c.field-meta.xml
<CustomField>
    <fullName>SoldDate__c</fullName>
    <description>To record the date an asset was sold. This field should be required if the asset status is sold.</description>
    <label>Sold date</label>
    <type>Date</type>
</CustomField>