force-app/main/default/objects/Asset__c/fields/SoldValue__c.field-meta.xml
<CustomField>
    <fullName>SoldValue__c</fullName>
    <description>To record the value at which the asset was sold. This should be required if the asset status is marked as sold.</description>
    <label>Sold value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>