force-app/main/default/objects/Asset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of an asset</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Gifted</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Discovery mistake</fullName>
            </value>
            <value>
                <fullName>Surrendered</fullName>
                <isActive>false</isActive>
                <label>Surrendered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>