force-app/main/default/objects/Asset__c/fields/ValuationDate__c.field-meta.xml
<CustomField>
    <fullName>ValuationDate__c</fullName>
    <description>Used to record the date the asset was last valued at.</description>
    <label>Valuation date</label>
    <type>Date</type>
</CustomField>