force-app/main/default/objects/Asset__c/validationRules/CreateOrUpdateIntegrationUserOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>CreateOrUpdateIntegrationUserOnly</fullName>
    <active>true</active>
    <description>Only users with the integration user custom permission can create or edit assets</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
NOT($Permission.IntegrationUser)</errorConditionFormula>
    <errorMessage>Any amendments to this record will need to be made through the appropriate flows</errorMessage>
</ValidationRule>