force-app/main/default/objects/Asset__c/validationRules/OnlyIntegrationUserCanEditOrCreate.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyIntegrationUserCanEditOrCreate</fullName>
    <active>false</active>
    <description>Only users with the Integration custom permission is able to create or edit assets</description>
    <errorConditionFormula>NOT($Permission.IntegrationUser)</errorConditionFormula>
    <errorMessage>Any amendments to this record will need to be made through the appropriate flows</errorMessage>
</ValidationRule>